prevent tables from stretching outside screen

--- a/src/frontend/music/src/App.css
+++ b/src/frontend/music/src/App.css
@@ -31,3 +31,7 @@
     transform: rotate(360deg);
   }
 }
+
+.ReactTable {
+  height: 95vh;
+}
